--- a/view/creationCompte.html
+++ b/view/creationCompte.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Creation de compte</title>
 </head>
 <body>
-$END$
+    Bonjour ca marche
 </body>
 </html>
