--- a/view/header.html
+++ b/view/header.html
@@ -53,12 +53,12 @@
 
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a href="#" class="nav-link active">
+                <a href="view/creationCompte.html" class="nav-link active">
                   Inscription
                 </a>
               </li>
               <li class="nav-item active">
-                <a href="#" class="nav-link active">
+                <a href="view/connectionSite.html" class="nav-link active">
                   Connection
                 </a>
               </li>
