--- a/view/header.html
+++ b/view/header.html
@@ -1,70 +1,72 @@
 <!doctype html>
-  <html lang="en">
-    <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <title>Acceuil</title>
-    </head>
-    <body>
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-      <div class="container">
-        <a href="#" class="navbar-brand mb-0 h1">
-          Le quartier des plaisirs
-        </a>
-        <button
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                class="navbar-toggler"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
+<html lang="en">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Acceuil</title>
+</head>
+<body>
+<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+  <div class="container">
+    <a href="#" class="navbar-brand mb-0 h1">
+      Le quartier des plaisirs
+    </a>
+    <button
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            class="navbar-toggler"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id ="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a href="#" class="nav-link active">
+            Home
+          </a>
+        </li>
+        <li class="nav-item active">
+          <a href="#" class="nav-link active">
+            Recettes
+          </a>
+        </li>
+        <li class="nav-item active">
+          <a href="#" class="nav-link active">
+            Pricing
+          </a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input type="text" class="form-control me-2">
+        <button type="submit" class="btn btn-outline-primary">
+          Rechercher
         </button>
-        <div class="collapse navbar-collapse" id ="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a href="#" class="nav-link active">
-                Home
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a href="#" class="nav-link active">
-                Recettes
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a href="#" class="nav-link active">
-                Pricing
-              </a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input type="text" class="form-control me-2">
-            <button type="submit" class="btn btn-outline-primary">
-              Rechercher
-            </button>
-          </form>
 
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a href="view/inscription.php" class="nav-link active">
-                Inscription
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a href="view/pageConnexion.php" class="nav-link active">
-                Connection
-              </a>
-            </li>
-          </ul>
+      </form>
+      <form action="routeur.php" method="get">
+        <input type='hidden' name='action' value='seConnecter' class="form-control me-2" >
+        <p>
+          <input class="bouton" type="submit" name="envoyer" value="Se connecter" class="btn btn-outline-primary">
+        </p>
+      </form>
 
-        </div>
-      </div>
-    </nav>
-    </body>
+      </form>
+      <form action="routeur.php" method="get">
+        <input type='hidden' name='action' value='sinscrire' class="form-control me-2" >
+        <p>
+          <input class="bouton" type="submit" name="envoyer" value="Inscription" class="btn btn-outline-primary">
+        </p>
+      </form>
+
+    </div>
+  </div>
+</nav>
+</body>
 </html>
