--- a/view/header.html
+++ b/view/header.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="view/css/headerStylesheet.css"/>
   <title>Acceuil</title>
 </head>
 <body>
-<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:#34495e;">
   <div class="container">
-    <a href="#" class="navbar-brand mb-0 h1">
+    <a href="routeur.php" class="navbar-brand mb-0 h1">
       Le quartier des plaisirs
     </a>
     <button
@@ -48,23 +49,20 @@
         <button type="submit" class="btn btn-outline-primary">
           Rechercher
         </button>
-
       </form>
       <form action="routeur.php" method="get">
-        <input type='hidden' name='action' value='seConnecter' class="form-control me-2" >
+        <input type='hidden' name='action' value='seConnecter' >
         <p>
-          <input class="bouton" type="submit" name="envoyer" value="Se connecter" class="btn btn-outline-primary">
+          <input class="btn second-button btn-default navbar-btn" type="submit" name="envoyer" value="Se connecter" style="color: white">
         </p>
       </form>
-
       </form>
       <form action="routeur.php" method="get">
-        <input type='hidden' name='action' value='sinscrire' class="form-control me-2" >
+        <input type='hidden' name='action' value='sinscrire'>
         <p>
-          <input class="bouton" type="submit" name="envoyer" value="Inscription" class="btn btn-outline-primary">
+          <input class="btn second-button btn-default navbar-btn" type="submit" name="envoyer" value="Inscription" style="color: white">
         </p>
       </form>
-
     </div>
   </div>
 </nav>
