--- a/view/header.html
+++ b/view/header.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -12,7 +12,8 @@
 <body>
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:#34495e;">
   <div class="container">
-    <a href="routeur.php" class="navbar-brand mb-0 h1">
+    <a href="routeur.php"
+       class="navbar-brand mb-0 h1">
       Le quartier des plaisirs
     </a>
     <button
@@ -26,7 +27,8 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id ="navbarNav">
+    <div class="collapse navbar-collapse"
+         id ="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a href="#" class="nav-link active">
@@ -50,21 +52,24 @@
           Rechercher
         </button>
       </form>
-      <form action="routeur.php" method="get">
-        <input type='hidden' name='action' value='seConnecter' >
-        <p>
-          <input class="btn second-button btn-default navbar-btn" type="submit" name="envoyer" value="Se connecter" style="color: white">
-        </p>
-      </form>
-      </form>
-      <form action="routeur.php" method="get">
-        <input type='hidden' name='action' value='sinscrire'>
-        <p>
-          <input class="btn second-button btn-default navbar-btn" type="submit" name="envoyer" value="Inscription" style="color: white">
-        </p>
-      </form>
+
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a href="routeur.php?action=seConnecter" class="nav-link active">
+            Connection
+          </a>
+        </li>
+        <li class="nav-item active">
+          <a href="routeur.php?action=inscription" class="nav-link active">
+            Inscription
+          </a>
+        </li>
+      </ul>
+
     </div>
   </div>
 </nav>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
