ajout d'un footer

--- a/view/footer.html
+++ b/view/footer.html
@@ -1,2 +1,40 @@
+
+    <footer class="text-white text-center text-lg-start" style="background-color: #ffb142">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <p>
+                        Site réalisé par Matthieu Schuler et
+                        Matthieu Tran
+                    </p>
+                </div>
+                <!--Grid column-->
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-0">Rapports projets: </h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-white">Prog web</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">BD</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+            </div>
+            <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: #f6b93b;">
+            Powered by HTML/CSS/PHP
+        </div>
+        <!-- Copyright -->
+    </footer>
 </body>
 </html>
