modification pageConnexion et pageInscription pour enlever l'espace blanc en dessous du footer

--- a/view/footer.html
+++ b/view/footer.html
@@ -12,7 +12,6 @@
                     </p>
                 </div>
                 <!--Grid column-->
-                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <h5 class="text-uppercase mb-0">Rapports projets: </h5>
 
@@ -32,7 +31,7 @@
         <!-- Grid container -->
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: #f6b93b;">
-            Powered by HTML/CSS/PHP
+            Powered by HTML/CSS/PHP/Bootstrap
         </div>
         <!-- Copyright -->
     </footer>
