--- a/view/css/style.css
+++ b/view/css/style.css
@@ -20,3 +20,11 @@ body {
     height: 150px;
     object-fit: cover;
 }
+
+#containerHeader{
+    min-height: 90px;
+}
+
+#navbarHeader{
+    background-color:#ffb142;
+}
