--- a/view/footer.html
+++ b/view/footer.html
@@ -16,10 +16,10 @@
 
                 <ul class="list-unstyled">
                     <li>
-                        <a href="#!" class="text-white">Prog web</a>
+                        <a href="./view/pdf/Rapport_ProgWeb_M.Tran_M.Schuler_TP3A1.pdf" class="text-white">Prog web</a>
                     </li>
                     <li>
-                        <a href="#!" class="text-white">BD</a>
+                        <a href="./view/pdf/Rapport_BD_M.Tran_M.Schuler_TP3A1.pdf" class="text-white">BD</a>
                     </li>
                 </ul>
             </div>
